Use Ace instead of highlightjs. Fix css for new Ace. Prevent flickering of toolpanel. Add github theme for Ace. Remove gutter in static highlight ext. Update languages for Ace.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -59,13 +59,14 @@ so editor doesn't display in the background. */
   position: fixed;
   background: #666;
   top: 0;
-  height: 30px;
+  height: 31px;
   right: 20px;
   width: 80px;
   vertical-align: middle;
   padding: 5px 0;
   margin: 0;
   text-align: center;
+  visibility: hidden;
 }
 
 .toolpanel.edit a.edit {
